# saas-core

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
examples/: QUICKSTART.md  README.md  backend.py  simple.html  usage_example.py
examples/frontend/: README.md  index.html  package-lock.json  package.json
examples/frontend/src/: App.css  App.jsx  index.css
saas_core/: __init__.py  auth.py  config.py  database.py  exceptions.py
tests/: conftest.py  test_auth.py  test_database.py
